fixed face not showing fullScreen on initial single page and added initial vanilla tilt

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,6 +17,7 @@ body {
 }
 
 .welcome-message {
+  display: flex;
   font-family: Raleway;
   font-size: 0.6rem;
   padding-top: 1rem;
